# website-template-python

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd-k8s-production.yml  cd-k8s-staging.yml  cd-production.yml  cd.yml  ci.yml
docs/: architecture.md  deployment.md  dev-setup.md  scaling-to-k8s.md
docs/adr/: ADR-001-drf-native-response-format.md  ADR-002-remove-repository-layer.md  ADR-003-service-layer-retained.md  README.md
docs/audit/: 2026-04-18-template-review.md  2026-04-19-template-review.md
infra/k8s/: configmap.yml  ingress.yml  namespace.yml  secret.example.yml
infra/k8s/backend/: deployment.yml  hpa.yml  service.yml
infra/k8s/database/: deployment.yml  pvc.yml  redis-deployment.yml  redis-service.yml  service.yml
infra/k8s/frontend/: deployment.yml  hpa.yml  service.yml
infra/nginx/: nginx.conf  nginx.dev.conf
scripts/: init-dev.sh  run-migrations.sh
src/backend/: .dockerignore  Dockerfile  Dockerfile.dev  conftest.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/apps/accounts/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  views.py
src/backend/apps/accounts/migrations/: 0001_initial.py  0002_user_lockout.py
src/backend/apps/accounts/tests/: factories.py  test_auth.py  test_services.py  test_users.py
src/backend/apps/accounts/urls/: auth.py  users.py
src/backend/apps/core/: exceptions.py  pagination.py  responses.py
src/backend/apps/core/tests/: test_api_docs.py  test_health.py
src/backend/config/: logging.py  urls.py
src/backend/config/settings/: base.py  development.py  production.py
src/frontend/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.spa.conf  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
src/frontend/src/: App.vue  main.ts
src/frontend/src/api/: auth.ts  client.ts  index.ts
src/frontend/src/assets/styles/: main.css
src/frontend/src/components/auth/: LoginForm.vue  RegisterForm.vue
src/frontend/src/components/common/: BaseButton.vue  BaseInput.vue  NotificationContainer.vue
src/frontend/src/components/layout/: AppFooter.vue  AppHeader.vue  AppLayout.vue
src/frontend/src/composables/: useAuth.ts
src/frontend/src/router/: index.ts
src/frontend/src/stores/: auth.store.ts  index.ts  notification.store.ts  ui.store.ts
src/frontend/src/types/: auth.ts  common.ts  index.ts
src/frontend/src/views/: DashboardView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue
src/frontend/tests/: setup.ts
src/frontend/tests/unit/stores/: auth.test.ts
