[project]
name = "website-template-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "drf-spectacular>=0.27,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "django-csp>=3.8,<4.0",
    "python-decouple>=3.8,<4.0",
    "structlog>=24.0,<25.0",
    "django-health-check>=3.18,<4.0",
    "gunicorn>=22.0,<23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=6.0,<7.0",
    "factory-boy>=3.3,<4.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<1.20",
    "django-stubs[compatible-mypy]>=6.0,<7.0",
    "djangorestframework-stubs>=3.15,<4.0",
    # bandit：靜態安全掃描（hardcoded secret、unsafe yaml.load、shell=True 等）。
    # 跟 ruff 的 S 系列規則有重疊但不完全等價，bandit 的 Django 專屬規則較完整。
    "bandit>=1.7,<2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]

# ruff format 取代 black：行為相容 black，但不需額外裝 black 也不需多跑一輪。
# 統一用 `uv run ruff format .` + `uv run ruff check .`，CI 與本機都走同一條路。
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.*.tests.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=apps --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.bandit]
# 掃 apps/ 和 config/，跳過 tests/（fixture 常有故意 hardcoded 密碼）
# 與 migrations/（Django 自動生成）。
exclude_dirs = ["tests", "migrations", ".venv"]
# B101 assert_used：tests 用 assert 是 pytest 標準，若 apps/ 裡要 assert
# 控制流建議改 raise（見 audit P2 的 assert isinstance 問題）。
# B104 hardcoded_bind_all_interfaces：容器內 0.0.0.0 是正常，跳過。
skips = ["B101", "B104"]
