[project]
name = "website-template-python"
version = "0.1.0"
requires-python = ">=3.14"
# 版本區間策略：鎖到 minor（`>=X.Y,<X.Y+1`），與 uv.lock 的安裝結果對齊。
# 只開放 patch（bugfix）升級；minor 升級需要明確調整 range 才能生效，避免
# `uv sync` 於 CI 自動升上 breaking 的 minor 版並讓測試在 PR 階段才爆掉。
dependencies = [
    "Django>=6.0.7,<6.1",
    "djangorestframework>=3.17.1,<3.18",
    "djangorestframework-simplejwt>=5.5.1,<5.6",
    "drf-spectacular>=0.30.0,<0.31",
    "psycopg[binary]>=3.3.4,<3.4",
    "django-cors-headers>=4.9,<4.10",
    "django-csp>=4.0,<4.1",
    "python-decouple>=3.8,<3.9",
    "structlog>=26.1.0,<26.2",
    "django-health-check>=4.4.3,<4.5",
    "gunicorn>=26.0.0,<26.1",
    # gunicorn 直接服務靜態檔（Django Admin CSS/JS），不需要另外的 volume /
    # initContainer 讓 nginx 讀 staticfiles/：production.py 搭配
    # CompressedManifestStaticFilesStorage 使用，見 config/settings/production.py。
    "whitenoise>=6.12.0,<6.13",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<9.2",
    "pytest-django>=4.12,<4.13",
    "pytest-cov>=7.1.0,<7.2",
    "factory-boy>=3.3.3,<3.4",
    # ruff 0.x 的 minor 號才是 breaking-change 邊界（0.14 → 0.15 會改 lint rule 行為），
    # patch-only 範圍對齊 uv.lock 的 0.15.x。
    "ruff>=0.15.22,<0.16",
    "mypy>=2.3.0,<2.4",
    "django-stubs[compatible-mypy]>=6.0.7,<6.1",
    "djangorestframework-stubs>=3.17.0,<3.18",
    # bandit：靜態安全掃描（hardcoded secret、unsafe yaml.load、shell=True 等）。
    # 跟 ruff 的 S 系列規則有重疊但不完全等價，bandit 的 Django 專屬規則較完整。
    "bandit>=1.9.4,<2.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]

# ruff format 取代 black：行為相容 black，但不需額外裝 black 也不需多跑一輪。
# 統一用 `uv run ruff format .` + `uv run ruff check .`，CI 與本機都走同一條路。
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.*.tests.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=apps --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.bandit]
# 掃 apps/ 和 config/，跳過 tests/（fixture 常有故意 hardcoded 密碼）
# 與 migrations/（Django 自動生成）。
exclude_dirs = ["tests", "migrations", ".venv"]
# B101 assert_used：tests 用 assert 是 pytest 標準，若 apps/ 裡要 assert
# 控制流建議改 raise（見 audit P2 的 assert isinstance 問題）。
# B104 hardcoded_bind_all_interfaces：容器內 0.0.0.0 是正常，跳過。
skips = ["B101", "B104"]
